testsuite/tests/typecheck/should_fail/T14761b.hs
{-# LANGUAGE BangPatterns #-}

module T14761b where

data A = A { a :: ! Maybe Int}
